# store

./: README.md  pyproject.toml
store/: __init__.py  cli.py  crypto.py  db.py
tests/: test_cli.py  test_completion.py  test_crypto.py  test_db.py
