[tool.poetry]
name = "store"
version = "0.1.0"
description = "A simple CLI secret manager with optional encryption"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"
cryptography = "^42.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"

[tool.poetry.scripts]
store = "store.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
